<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">PalHunter</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="title_activity_create_user">CreateUserActivity</string>
	<string name="create_new_account">Sign Up</string>
	<string name="log_in">Log In</string>
	<string name="create_button">Create</string>
	<string name="android_api_key">0W4EwH5Ey6PU6tiCpR3QDXuoN9cTeFdv6rdm6Ow</string>
	<string name="title_activity_log_in">LogInActivity</string>
	<string name="no_account_alert">Can not find the user! Please input your name and try again</string>
	<string name="ok">OK</string>
	<string name="log_out">log out</string>
	<string name="my_past_location">show my past locations</string>
	<string name="friend_list">friend list</string>
	<string name="cancel">Cancel and exit</string>
	<string name="title_activity_map_query">MapQueryActivity</string>
	<string name="current_location">"current location"</string>
	<string name="past_location">past locations</string>
	<string name="name">friend name</string>
	<string name="title_activity_my_location">MyLocation</string>
	<string name="title_activity_my_path">MyPath</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="title_activity_friend_list">FriendListActivity</string>
	<string name="edit">EDIT</string>
	<string name="title_activity_friend_manager">FriendManagerActivity</string>
	<string name="lblBtnAdd">Add Item</string>
	<string name="txtEmpty">List is empty</string>
	<string name="lblBtnDel">Delete Selected Items</string>
	<string name="remove_friends">Remove</string>
	<string name="add_friends">Add</string>
	<string name="add_more_friends">Add List</string>
	<string name="title_activity_add_more_friends">AddMoreFriendsActivity</string>
	<string name="friend_manager">manage friends</string>
	<string name="title_activity_query_location">QueryLocationActivity</string>
	<string name="find_my_friend">query</string>
	<string name="back_to_map">My Map</string>
	<string name="location_manager">my friend locations</string>
	<string name="query_my_friends_within_distance">my friends within </string>
	<string name="miles">miles</string>
	<string name="kms">kms</string>
	<string name="search">search</string>
	<string name="username">Username</string>
	<string name="password">password</string>
	<string name="email">email</string>
	<string name="knnSearchBtn">knnSearch</string>
	<string name="rangeSearchBtn">rangeSearch</string>
	<string name="k_nn_hint">num of nearest user</string>
	<string name="knn_user">users</string>
	<string name="knn_friend">friends</string>
	<string name="feet">feet</string>
	<string name="meter">meter</string>
	
</resources>